# nanoGPT

./: .gitignore  Makefile  data.dvc  pyproject.toml  requirements.txt  wheels.dvc
.dvc/: config
